terraforming-control-plane/deploy.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "1"
  creationTimestamp: 2019-06-17T04:29:08Z
  generation: 3
  labels:
    app: demo
    env: dev
  name: demo
  namespace: default
  resourceVersion: "98520"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/demo
  uid: 72a2aa0d-90b8-11e9-a146-0619a97effc2
spec:
  progressDeadlineSeconds: 2147483647
  replicas: 4
  revisionHistoryLimit: 2147483647
  selector:
    matchLabels:
      app: demo
      env: dev
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: demo
        env: dev
    spec:
      containers:
      - image: harbor.pks.ctatineni.com/library/demo:0.1
        imagePullPolicy: IfNotPresent
        name: demo
        livenessProbe:
        failureThreshold: 5
        httpGet:
          path: /health
          port: 8080
          scheme: HTTP
        initialDelaySeconds: 60
        periodSeconds: 10
        successThreshold: 1
        timeoutSeconds: 5
        ports:
        - containerPort: 8080
          protocol: TCP
      dnsPolicy: ClusterFirst
      restartPolicy: Always
